Highly Available Microservices Deployment on Kubernetes (k3s) with AWS Networking/Terraform v2/listener.tf
resource "aws_lb_listener" "listener" {
  load_balancer_arn = aws_lb.nlb.arn
  port              = 80
  protocol          = "TCP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tg.arn
  }
}
